rect, circle, square

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   			<select id = "selectFigure">
   				<option value="" selected disabled hidden>Please choose a figure</option>
   				<option> Rectangle </option>
-  				<option> Triangle </option>
+  				<option> Square </option>
   				<option> Circle </option>
   			</select>
 
